--- a/public/system/views/index.html
+++ b/public/system/views/index.html
@@ -1,3 +1,11 @@
 <section data-ng-controller="IndexController">
     <h1 mean-token="'home-default'">This is the home view</h1>
 </section>
+
+<section data-ng-controller="Index2Controller">
+    <h1 mean-token="'home-default2'">This is the home view 2</h1>
+</section>
+
+<section data-ng-controller="Home3Controller">
+    <h1 mean-token="'home-default3'">This is the home view 3</h1>
+</section>
